methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:52: error: not found: value faireMortif
faireMortif()
^PatternPicture:58: error: only classes can have declared but undefined members
def faireLigne()
    ^PatternPicture:59: error: not found: value faireMortif
faireMortif()
^