methods.picture.PatternPicture.scala.code
override def run() {
 
  faireMotif()
  gauche()
  avance(4)
}
 

def faireMotif(){ 
 avance()
 setCouleurBrosse(Color.RED)
 baisseBrosse()
 leveBrosse()
 avance()
 setCouleurBrosse(Color.BLUE)
 baisseBrosse()
 leveBrosse()
 avance()
 gauche()
 avance()
 setCouleurBrosse(Color.BLUE)
 baisseBrosse()
 leveBrosse()
 avance()
 setCouleurBrosse(Color.GREEN)
 baisseBrosse()
 leveBrosse()
 avance()
 gauche()
avance()
 setCouleurBrosse(Color.GREEN)
 baisseBrosse()
 leveBrosse()
 avance()
 setCouleurBrosse(Color.YELLOW)
 baisseBrosse()
 leveBrosse()
 avance()
 gauche()
avance()
 setCouleurBrosse(Color.YELLOW)
 baisseBrosse()
 leveBrosse()
 avance()
 setCouleurBrosse(Color.RED)
 baisseBrosse()
 leveBrosse()
 avance()
}

def faireLigne(){  
faireMortif()
avance(4)
faireMotif()
recule(4)
gauche()
recule(4)
def faireLigne()
faireMortif()
avance(4)
faireMotif()
}